Book-4/chapter-20/challenge-production-pipeline/solution/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    environment: production
